API Spec: update paginated responses data
